<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="165dp"
            android:layout_height="73dp"
            android:layout_below="@+id/rg_departments"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="124dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="104dp"
            android:layout_marginBottom="36dp"
            android:text="@string/btn_save" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="0dp"
            android:src="@drawable/select_image" />

        <TextView
            android:id="@+id/tv_selectAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="78dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="90dp"
            android:text="@string/tv_selectAvatar"
            android:textAlignment="center"
            android:textColor="#110909"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_firstName"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_below="@+id/tv_selectAvatar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/hint_firstName"
            android:inputType="textPersonName"
            android:text="@string/et_firstName" />

        <EditText
            android:id="@+id/et_lastName"
            android:layout_width="550dp"
            android:layout_height="62dp"
            android:layout_below="@+id/et_firstName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="@string/hint_lastName"
            android:inputType="textPersonName"
            android:text="@string/et_lastName" />

        <EditText
            android:id="@+id/et_studentNumber"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_lastName"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="33dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="48dp"
            android:ems="10"
            android:hint="@string/hint_studentNumber"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/rg_departments"
            android:layout_width="536dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_departments"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="37dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="34dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_other" />

            <RadioButton
                android:id="@+id/rb_bio"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_bio" />

            <RadioButton
                android:id="@+id/rb_sis"
                android:layout_width="98dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_sis" />

            <RadioButton
                android:id="@+id/rb_cs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_cs" />
        </RadioGroup>

        <TextView
            android:id="@+id/tv_departments"
            android:layout_width="572dp"
            android:layout_height="66dp"
            android:layout_below="@+id/et_studentNumber"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="0dp"
            android:text="@string/tv_dept"
            android:textColor="#0C0707"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

</FrameLayout>