<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayMyProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_displayAvatar"
            android:layout_width="275dp"
            android:layout_height="184dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="73dp"
            android:layout_marginTop="67dp"
            android:layout_marginEnd="63dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_Name"
            android:layout_width="339dp"
            android:layout_height="67dp"
            android:layout_below="@+id/iv_displayAvatar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="29dp"
            android:text="@string/tv_Name"
            android:textColor="#090404"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_studentId"
            android:layout_width="339dp"
            android:layout_height="67dp"
            android:layout_below="@+id/tv_Name"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="29dp"
            android:text="@string/tv_studentId"
            android:textColor="#130A0A"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_selectedDept"
            android:layout_width="347dp"
            android:layout_height="64dp"
            android:layout_below="@+id/tv_studentId"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="43dp"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="21dp"
            android:text="@string/tv_selectedDept"
            android:textColor="#0F0303"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Edit"
            android:layout_width="152dp"
            android:layout_height="58dp"
            android:layout_below="@+id/tv_selectedDept"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="106dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="106dp"
            android:text="@string/btn_Edit" />
    </RelativeLayout>

</FrameLayout>